// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a non-glamorous component with theme 1`] = `
<div
  style="padding:10px;"
/>
`;

exports[`with theme prop of padding 10px 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "padding": 10,
      }
    }
  >
    <ThemedComponent>
      <Component
        theme={
          Object {
            "padding": 10,
          }
        }
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        />
      </Component>
    </ThemedComponent>
  </ThemeProvider>
</Component>
`;

exports[`with theme prop of padding 10px 2`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "padding": 10,
      }
    }
  >
    <ThemedComponent>
      <Child
        theme={
          Object {
            "padding": 10,
          }
        }
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        />
      </Child>
    </ThemedComponent>
  </ThemeProvider>
</Component>
`;

exports[`with theme prop of padding 20px 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "padding": 20,
      }
    }
  >
    <ThemedComponent>
      <Component
        theme={
          Object {
            "padding": 20,
          }
        }
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        />
      </Component>
    </ThemedComponent>
  </ThemeProvider>
</Component>
`;

exports[`without theme provider 1`] = `
<Component>
  <ThemedComponent>
    <Component
      theme={Object {}}
    >
      <div />
    </Component>
  </ThemedComponent>
</Component>
`;
